--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -3,12 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<EditTextPreference
-    android:title="@string/pref_location_label"
-    android:key ="@string/pref_location_key"
-    android:defaultValue="@string/pref_location_default"
-    android:inputType="text"
-    android:singleLine="true"
-    >
-    </EditTextPreference>>
+    <EditTextPreference
+        android:title="@string/pref_location_label"
+        android:key ="@string/pref_location_key"
+        android:defaultValue="@string/pref_location_default"
+        android:inputType="text"
+        android:singleLine="true">
+
+    </EditTextPreference>
+    <ListPreference android:title="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:defaultValue="@string/pref_units_metric"
+        android:entries="@array/pref_units_options"
+        android:entryValues="@array/pref_units_values">
+        </ListPreference>
+
 </PreferenceScreen>
